# django-dnsmanager

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  __init__.py  admin.py  apps.py  models.py  runtests.py  setup.cfg  tests.py  tox.ini
dnsmanager/: __init__.py  admin.py  apps.py  fields.py  models.py  tests.py  urls.py  views.py
dnsmanager/api/: polymorphic_serializer.py  serializers.py  views.py
dnsmanager/locale/fr/LC_MESSAGES/: django.po
dnsmanager/migrations/: 0001_initial.py
dnsmanager/templates/dnsmanager/: zone_detail.html
dnsmanager/tests/: test_api.py  test_models.py  test_views.py
docs/: conf.py  index.rst  integrations.rst  models.rst  requirements.txt  views.rst
example/: .gitignore  README.md  manage.py
example/example/: settings.py  urls.py  wsgi.py
