[metadata]
name = django-dnsmanager
version = 0.1.0
description = DNS manager app for Django
author = Alexandre Iooss
author_email = erdnaxe@crans.org
maintainer = Alexandre Iooss
maintainer_email = erdnaxe@crans.org
url = https://github.com/constellation-project/django-dnsmanager
download_url = https://github.com/constellation-project/django-dnsmanager/tarball/master
keywords = django, dns, manager
classifiers =
	Development Status :: 4 - Beta
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 1.11
	Framework :: Django :: 2.2
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Database

[options]
packages = find:
include_package_data = True
install_requires =
	Django >= 1.11
	django-polymorphic ~= 2.0

[options.packages.find]
exclude =
	dnsmanager.tests

[bdist_wheel]
universal = 1
